feat: Add protos for MC API Phase II.

--- a/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
@@ -379,6 +379,7 @@ proto_library(
         "@com_google_googleapis//google/api:client_proto",
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
+        "@com_google_googleapis//google/longrunning:operations_proto",
         "@com_google_protobuf//:timestamp_proto",
     ],
 )
@@ -462,6 +463,15 @@ kt_jvm_grpc_proto_library(
     name = "metric_calculation_specs_service_kt_jvm_grpc_proto",
     deps = [":metric_calculation_specs_service_proto"],
 )
+
+# TODO(@kungfucraig): Figure out how to have a build rule for the operations service.
+# proto_library(
+#     name = "operations_service_proto",
+#     srcs = ["???"],
+#     strip_import_prefix = IMPORT_PREFIX,
+#     deps = [
+#     ],
+# )
 
 proto_library(
     name = "reports_service_proto",
