--- a/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
@@ -154,6 +154,7 @@ proto_library(
     deps = [
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_protobuf//:duration_proto",
+        "@com_google_googleapis//google/api:field_behavior_proto",
     ],
 )
 
