--- a/src/main/python/wfa/measurement/reporting/postprocessing/noiseninja/BUILD.bazel
+++ b/src/main/python/wfa/measurement/reporting/postprocessing/noiseninja/BUILD.bazel
@@ -10,6 +10,7 @@ py_library(
         requirement("absl-py"),
         requirement("highspy"),
         requirement("numpy"),
+        requirement("osqp"),
         requirement("qpsolvers"),
     ],
 )
