--- a/src/main/kotlin/org/wfanet/measurement/access/service/v1alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/access/service/v1alpha/BUILD.bazel
@@ -83,6 +83,7 @@ kt_jvm_library(
     name = "services",
     srcs = ["Services.kt"],
     deps = [
+        ":policies_service",
         ":permissions_service",
         ":policies_service",
         ":principals_service",
