--- a/src/main/kotlin/org/wfanet/measurement/access/service/v1alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/access/service/v1alpha/BUILD.bazel
@@ -66,6 +66,7 @@ kt_jvm_library(
     name = "services",
     srcs = ["Services.kt"],
     deps = [
+        ":policies_service",
         ":principals_service",
         ":roles_service",
         "//src/main/proto/wfa/measurement/access/v1alpha:permissions_service_kt_jvm_grpc_proto",
