--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -430,6 +430,7 @@ cue_dump(
         "image_tag": IMAGE_REPOSITORY_SETTINGS.image_tag,
         "public_api_address_name": REPORTING_K8S_SETTINGS.public_api_address_name,
         "google_cloud_project": GCLOUD_SETTINGS.project,
+        "spanner_instance": GCLOUD_SETTINGS.spanner_instance,
         "postgres_instance": GCLOUD_SETTINGS.postgres_instance,
         "postgres_region": GCLOUD_SETTINGS.postgres_region,
         "kingdom_public_api_target": KINGDOM_K8S_SETTINGS.public_api_target,
