--- a/src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
@@ -33,7 +33,6 @@ proto_library(
     deps = [
         ":queue_proto",
         "@com_google_googleapis//google/api:field_behavior_proto",
-        "@com_google_googleapis//google/api:resource_proto",
         "@com_google_protobuf//:any_proto",
     ],
 )
@@ -46,17 +45,18 @@ kt_jvm_proto_library(
 #Services.
 
 proto_library(
-    name = "work_items_service_proto",
-    srcs = ["work_items_service.proto"],
+    name = "queues_service_proto",
+    srcs = ["queues_service.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
         ":work_item_proto",
         "@com_google_googleapis//google/api:client_proto",
         "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
     ],
 )
 
 kt_jvm_grpc_proto_library(
-    name = "work_items_service_kt_jvm_grpc_proto",
-    deps = [":work_items_service_proto"],
+    name = "queues_service_kt_jvm_grpc_proto",
+    deps = [":queues_service_proto"],
 )
