--- a/src/test/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
@@ -1,16 +1,16 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
 
 kt_jvm_test(
-    name = "GooglePubSubWorkItemsServiceTest",
-    srcs = ["GooglePubSubWorkItemsServiceTest.kt"],
+    name = "GooglePubSubQueuesServiceTest",
+    srcs = ["GooglePubSubQueuesServiceTest.kt"],
     associates = [
-        "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:work_items_service",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:queues_service",
     ],
-    test_class = "org.wfanet.measurement.securecomputation.controlplane.v1alpha.GooglePubSubWorkItemsServiceTest",
+    test_class = "org.wfanet.measurement.securecomputation.controlplane.v1alpha.GooglePubSubQueuesServiceTest",
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:google_pub_sub_work_items_service",
-        "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_item_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_items_service_kt_jvm_grpc_proto",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:google_pub_sub_queues_service",
+        "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:queue_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:queues_service_kt_jvm_grpc_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
