feat: Add libraries for Access API clients

--- a/src/main/kotlin/org/wfanet/measurement/access/service/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/access/service/BUILD.bazel
@@ -2,6 +2,7 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
 package(
     default_visibility = [
+        "//src/main/kotlin/org/wfanet/measurement/access/client:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/access/deploy:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/access/service:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/access/service:__subpackages__",
