--- a/src/main/kotlin/org/wfanet/measurement/access/service/v1alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/access/service/v1alpha/BUILD.bazel
@@ -36,12 +36,28 @@ kt_jvm_library(
 )
 
 kt_jvm_library(
+    name = "policies_service",
+    srcs = ["PoliciesService.kt"],
+    deps = [
+        ":resource_conversion",
+        "//src/main/kotlin/org/wfanet/measurement/access/service:errors",
+        "//src/main/kotlin/org/wfanet/measurement/access/service:resource_key",
+        "//src/main/kotlin/org/wfanet/measurement/access/service/internal:errors",
+        "//src/main/kotlin/org/wfanet/measurement/common/api:resource_ids",
+        "//src/main/proto/wfa/measurement/access/v1alpha:policies_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/internal/access:policies_service_kt_jvm_grpc_proto",
+    ],
+)
+
+kt_jvm_library(
     name = "resource_conversion",
     srcs = ["ResourceConversion.kt"],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/access/service:resource_key",
+        "//src/main/proto/wfa/measurement/access/v1alpha:policy_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/access/v1alpha:principal_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/access/v1alpha:role_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/internal/access:policy_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/access:principal_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/access:role_kt_jvm_proto",
     ],
@@ -51,6 +67,7 @@ kt_jvm_library(
     name = "services",
     srcs = ["Services.kt"],
     deps = [
+        ":policies_service",
         ":principals_service",
         ":roles_service",
         "//src/main/proto/wfa/measurement/access/v1alpha:permissions_service_kt_jvm_grpc_proto",
