--- a/src/main/k8s/testing/secretfiles/BUILD.bazel
+++ b/src/main/k8s/testing/secretfiles/BUILD.bazel
@@ -141,7 +141,7 @@ proto_descriptor_set(
 )
 
 proto_descriptor_set(
-    name = "test_event_type_set",
+    name = "test_event_message_descriptor_set",
     deps = [
         "//src/main/proto/wfa/measurement/api/v2alpha/event_templates/testing:test_event_proto",
     ],
