--- a/src/main/k8s/dev/synthetic_generator_config_files_kustomization.yaml
+++ b/src/main/k8s/dev/synthetic_generator_config_files_kustomization.yaml
@@ -21,4 +21,4 @@ configMapGenerator:
   - synthetic_event_group_spec_large_3.textproto
   - known_event_group_metadata_type_set.pb
   - person_type_set.pb
-  - test_event_type_set.pb
+  - test_event_message_descriptor_set.pb
