--- a/src/main/k8s/local/testing/config_files_kustomization.yaml
+++ b/src/main/k8s/local/testing/config_files_kustomization.yaml
@@ -25,4 +25,4 @@ configMapGenerator:
   - synthetic_event_group_spec_small_2.textproto
   - known_event_group_metadata_type_set.pb
   - person_type_set.pb
-  - test_event_type_set.pb
+  - test_event_message_descriptor_set.pb
