Add missing source in build file.

--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -396,6 +396,7 @@ kustomization_dir(
     testonly = True,
     srcs = [
         "synthetic_generator_config_files_kustomization.yaml",
+        "//src/main/k8s/testing/data:synthetic_generation_specs_large",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
     ],
     renames = {
