Create test resources and add population requisition fulfiller test to EmptyClusterCorrectnessTest.

--- a/src/main/k8s/dev/config_files_kustomization.yaml
+++ b/src/main/k8s/dev/config_files_kustomization.yaml
@@ -17,3 +17,7 @@ configMapGenerator:
   files:
   - authority_key_identifier_to_principal_map.textproto
   - known_event_group_metadata_type_set.pb
+  - population_spec_small.textproto
+  - person_type_set.pb
+  - test_event_message_descriptor_set.pb
+
