--- a/src/main/k8s/testing/data/BUILD.bazel
+++ b/src/main/k8s/testing/data/BUILD.bazel
@@ -17,3 +17,8 @@ filegroup(
     name = "service_config",
     srcs = ["default_service_config.textproto"],
 )
+
+filegroup(
+    name = "real_population_spec_small",
+    srcs = ["population_spec_small.textproto"],
+)
