--- a/src/main/k8s/local/BUILD.bazel
+++ b/src/main/k8s/local/BUILD.bazel
@@ -331,9 +331,12 @@ kustomization_dir(
         "config_files_kustomization.yaml",
         "empty_akid_mapping_config.textproto",
         "empty_encryption_key_pair_config.textproto",
+        "//src/main/k8s/testing/data:real_population_spec_small",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:metric_spec_config.textproto",
+        "//src/main/k8s/testing/secretfiles:person_type_set",
+        "//src/main/k8s/testing/secretfiles:test_event_message_descriptor_set",
     ],
     renames = {
         "config_files_kustomization.yaml": "kustomization.yaml",
@@ -347,9 +350,12 @@ kustomization_dir(
     srcs = [
         "config_files_kustomization.yaml",
         ":encryption_key_pair_config.textproto",
+        "//src/main/k8s/testing/data:real_population_spec_small",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:metric_spec_config.textproto",
+        "//src/main/k8s/testing/secretfiles:person_type_set",
+        "//src/main/k8s/testing/secretfiles:test_event_message_descriptor_set",
     ],
     renames = {
         "config_files_kustomization.yaml": "kustomization.yaml",
