--- a/src/main/k8s/local/testing/BUILD.bazel
+++ b/src/main/k8s/local/testing/BUILD.bazel
@@ -61,9 +61,12 @@ kustomization_dir(
     name = "config_files",
     srcs = [
         "config_files_kustomization.yaml",
+        "//src/main/k8s/testing/data:real_population_spec_small",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:metric_spec_config.textproto",
+        "//src/main/k8s/testing/secretfiles:person_type_set",
+        "//src/main/k8s/testing/secretfiles:test_event_message_descriptor_set",
     ],
     renames = {"config_files_kustomization.yaml": "kustomization.yaml"},
     tags = ["manual"],
