--- a/src/main/kotlin/org/wfanet/measurement/access/deploy/tools/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/access/deploy/tools/BUILD.bazel
@@ -11,6 +11,7 @@ kt_jvm_library(
     srcs = ["Access.kt"],
     deps = [
         "//src/main/proto/wfa/measurement/access/v1alpha:principals_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/access/v1alpha:roles_service_kt_jvm_grpc_proto",
         "@wfa_common_jvm//imports/java/picocli",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
     ],
