--- a/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
@@ -1,6 +1,10 @@
 load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
 load("@rules_proto//proto:defs.bzl", "proto_descriptor_set")
-load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_grpc_proto_library")
+load(
+    "@wfa_rules_kotlin_jvm//kotlin:defs.bzl",
+    "kt_jvm_grpc_proto_library",
+    "kt_jvm_proto_library",
+)
 load("//src/main/proto/wfa/measurement/internal/common:macros.bzl", "IMPORT_PREFIX", "proto_and_kt_jvm_proto_library")
 
 package(default_visibility = ["//:__subpackages__"])
@@ -208,58 +212,42 @@ kt_jvm_grpc_proto_library(
     deps = [":report_schedule_iterations_service_proto"],
 )
 
-proto_and_kt_jvm_proto_library(
-    name = "event_template_field",
+MESSAGE_LIBS = [
+    "basic_metric_set",
+    "basic_report_details",
+    "basic_report",
+    "component_intersection_metric_set_details",
+    "component_metric_set",
+    "custom_impression_qualification_filter_spec",
+    "event_filter",
+    "event_template_field",
+    "impression_qualification_filter_spec",
+    "metric_frequency_spec",
+    "metric_metadata_details",
+    "metric_set_details",
+    "page",
+    "reporting_impression_qualification_filter",
+    "reporting_interval",
+    "reporting_unit_component_summary_details",
+]
+
+proto_library(
+    name = "basic_metric_set_proto",
+    srcs = ["basic_metric_set.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
 )
 
-proto_and_kt_jvm_proto_library(
-    name = "event_filter",
-    deps = [":event_template_field_proto"],
+proto_library(
+    name = "basic_report_details_proto",
+    srcs = ["basic_report_details.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [":reporting_interval_proto"],
 )
 
-proto_and_kt_jvm_proto_library(
-    name = "impression_qualification_filter_spec",
-    deps = [":event_filter_proto"],
-)
-
-proto_and_kt_jvm_proto_library(
-    name = "reporting_impression_qualification_filter",
-    deps = [":impression_qualification_filter_spec_proto"],
-)
-
-proto_and_kt_jvm_proto_library(
-    name = "reporting_interval",
-    deps = [
-        "@com_google_googleapis//google/type:date_proto",
-        "@com_google_googleapis//google/type:datetime_proto",
-    ],
-)
-
-proto_and_kt_jvm_proto_library(
-    name = "metric_frequency_spec",
-    deps = ["@com_google_googleapis//google/type:dayofweek_proto"],
-)
-
-proto_and_kt_jvm_proto_library(
-    name = "page",
-    deps = [
-        ":event_filter_proto",
-        ":event_template_field_proto",
-        ":metric_frequency_spec_proto",
-        ":reporting_impression_qualification_filter_proto",
-        "@com_google_googleapis//google/type:interval_proto",
-    ],
-)
-
-proto_and_kt_jvm_proto_library(
-    name = "basic_report_details",
-    deps = [
-        ":reporting_interval_proto",
-    ],
-)
-
-proto_and_kt_jvm_proto_library(
-    name = "basic_report",
+proto_library(
+    name = "basic_report_proto",
+    srcs = ["basic_report.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
     deps = [
         ":basic_report_details_proto",
         ":page_proto",
@@ -267,6 +255,114 @@ proto_and_kt_jvm_proto_library(
         "@com_google_protobuf//:timestamp_proto",
     ],
 )
+
+proto_library(
+    name = "component_intersection_metric_set_details_proto",
+    srcs = ["component_intersection_metric_set_details.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [":basic_metric_set_proto"],
+)
+
+proto_library(
+    name = "component_metric_set_proto",
+    srcs = ["component_metric_set.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [":basic_metric_set_proto"],
+)
+
+proto_library(
+    name = "custom_impression_qualification_filter_spec_proto",
+    srcs = ["custom_impression_qualification_filter_spec.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [":impression_qualification_filter_spec_proto"],
+)
+
+proto_library(
+    name = "event_filter_proto",
+    srcs = ["event_filter.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [":event_template_field_proto"],
+)
+
+proto_library(
+    name = "event_template_field_proto",
+    srcs = ["event_template_field.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+)
+
+proto_library(
+    name = "impression_qualification_filter_spec_proto",
+    srcs = ["impression_qualification_filter_spec.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [":event_filter_proto"],
+)
+
+proto_library(
+    name = "metric_frequency_spec_proto",
+    srcs = ["metric_frequency_spec.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = ["@com_google_googleapis//google/type:dayofweek_proto"],
+)
+
+proto_library(
+    name = "metric_metadata_details_proto",
+    srcs = ["metric_metadata_details.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        ":event_filter_proto",
+        ":event_template_field_proto",
+        ":metric_frequency_spec_proto",
+        "@com_google_googleapis//google/type:interval_proto",
+    ],
+)
+
+proto_library(
+    name = "metric_set_details_proto",
+    srcs = ["metric_set_details.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [":basic_metric_set_proto"],
+)
+
+proto_library(
+    name = "page_proto",
+    srcs = ["page.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        ":component_intersection_metric_set_details_proto",
+        ":component_metric_set_proto",
+        ":metric_metadata_details_proto",
+        ":metric_set_details_proto",
+        ":reporting_impression_qualification_filter_proto",
+        ":reporting_unit_component_summary_details_proto",
+    ],
+)
+
+proto_library(
+    name = "reporting_impression_qualification_filter_proto",
+    srcs = ["reporting_impression_qualification_filter.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [":custom_impression_qualification_filter_spec_proto"],
+)
+
+proto_library(
+    name = "reporting_interval_proto",
+    srcs = ["reporting_interval.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        "@com_google_googleapis//google/type:date_proto",
+        "@com_google_googleapis//google/type:datetime_proto",
+    ],
+)
+
+proto_library(
+    name = "reporting_unit_component_summary_details_proto",
+    srcs = ["reporting_unit_component_summary_details.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+)
+
+SERVICE_LIBS = [
+    "basic_reports",
+]
 
 proto_library(
     name = "basic_reports_service_proto",
@@ -278,21 +374,37 @@ proto_library(
     ],
 )
 
-kt_jvm_grpc_proto_library(
-    name = "basic_reports_service_kt_jvm_grpc_proto",
-    deps = [":basic_reports_service_proto"],
-)
+[
+    kt_jvm_proto_library(
+        name = "{prefix}_kt_jvm_proto".format(prefix = prefix),
+        deps = [":{prefix}_proto".format(prefix = prefix)],
+    )
+    for prefix in MESSAGE_LIBS
+]
+
+[
+    kt_jvm_grpc_proto_library(
+        name = "{prefix}_service_kt_jvm_grpc_proto".format(prefix = prefix),
+        deps = [":{prefix}_service_proto".format(prefix = prefix)],
+    )
+    for prefix in SERVICE_LIBS
+]
 
 proto_descriptor_set(
     name = "descriptor_set",
     deps = [
+        ":basic_metric_set_proto",
         ":basic_report_details_proto",
+        ":component_intersection_metric_set_details_proto",
+        ":component_metric_set_proto",
+        ":custom_impression_qualification_filter_spec_proto",
         ":event_filter_proto",
         ":event_template_field_proto",
         ":impression_qualification_filter_spec_proto",
         ":metric_frequency_spec_proto",
-        ":page_proto",
-        ":reporting_impression_qualification_filter_proto",
+        ":metric_metadata_details_proto",
+        ":metric_set_details_proto",
         ":reporting_interval_proto",
+        ":reporting_unit_component_summary_details_proto",
     ],
 )
