--- a/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
@@ -213,29 +213,19 @@ kt_jvm_grpc_proto_library(
 )
 
 MESSAGE_LIBS = [
-    "basic_metric_set",
     "basic_report_details",
     "basic_report",
-    "component_intersection_metric_set_details",
-    "component_metric_set",
     "custom_impression_qualification_filter_spec",
     "event_filter",
     "event_template_field",
     "impression_qualification_filter_spec",
     "metric_frequency_spec",
     "metric_metadata_details",
-    "metric_set_details",
+    "metric_set",
     "page",
     "reporting_impression_qualification_filter",
     "reporting_interval",
-    "reporting_unit_component_summary_details",
 ]
-
-proto_library(
-    name = "basic_metric_set_proto",
-    srcs = ["basic_metric_set.proto"],
-    strip_import_prefix = IMPORT_PREFIX,
-)
 
 proto_library(
     name = "basic_report_details_proto",
@@ -254,20 +244,6 @@ proto_library(
         ":reporting_impression_qualification_filter_proto",
         "@com_google_protobuf//:timestamp_proto",
     ],
-)
-
-proto_library(
-    name = "component_intersection_metric_set_details_proto",
-    srcs = ["component_intersection_metric_set_details.proto"],
-    strip_import_prefix = IMPORT_PREFIX,
-    deps = [":basic_metric_set_proto"],
-)
-
-proto_library(
-    name = "component_metric_set_proto",
-    srcs = ["component_metric_set.proto"],
-    strip_import_prefix = IMPORT_PREFIX,
-    deps = [":basic_metric_set_proto"],
 )
 
 proto_library(
@@ -317,10 +293,9 @@ proto_library(
 )
 
 proto_library(
-    name = "metric_set_details_proto",
-    srcs = ["metric_set_details.proto"],
+    name = "metric_set_proto",
+    srcs = ["metric_set.proto"],
     strip_import_prefix = IMPORT_PREFIX,
-    deps = [":basic_metric_set_proto"],
 )
 
 proto_library(
@@ -328,12 +303,9 @@ proto_library(
     srcs = ["page.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
-        ":component_intersection_metric_set_details_proto",
-        ":component_metric_set_proto",
         ":metric_metadata_details_proto",
-        ":metric_set_details_proto",
+        ":metric_set_proto",
         ":reporting_impression_qualification_filter_proto",
-        ":reporting_unit_component_summary_details_proto",
     ],
 )
 
@@ -352,12 +324,6 @@ proto_library(
         "@com_google_googleapis//google/type:date_proto",
         "@com_google_googleapis//google/type:datetime_proto",
     ],
-)
-
-proto_library(
-    name = "reporting_unit_component_summary_details_proto",
-    srcs = ["reporting_unit_component_summary_details.proto"],
-    strip_import_prefix = IMPORT_PREFIX,
 )
 
 SERVICE_LIBS = [
@@ -393,18 +359,14 @@ proto_library(
 proto_descriptor_set(
     name = "descriptor_set",
     deps = [
-        ":basic_metric_set_proto",
         ":basic_report_details_proto",
-        ":component_intersection_metric_set_details_proto",
-        ":component_metric_set_proto",
         ":custom_impression_qualification_filter_spec_proto",
         ":event_filter_proto",
         ":event_template_field_proto",
         ":impression_qualification_filter_spec_proto",
         ":metric_frequency_spec_proto",
         ":metric_metadata_details_proto",
-        ":metric_set_details_proto",
+        ":metric_set_proto",
         ":reporting_interval_proto",
-        ":reporting_unit_component_summary_details_proto",
     ],
 )
