--- a/src/test/kotlin/org/wfanet/measurement/access/deploy/tools/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/access/deploy/tools/BUILD.bazel
@@ -17,6 +17,7 @@ kt_jvm_test(
     test_class = "org.wfanet.measurement.access.deploy.tools.AccessTest",
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/access/deploy/tools:access",
+        "//src/main/proto/wfa/measurement/access/v1alpha:permissions_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/access/v1alpha:principals_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/access/v1alpha:roles_service_kt_jvm_grpc_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
