--- a/src/test/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha/BUILD.bazel
@@ -8,26 +8,20 @@ kt_jvm_test(
     ],
     test_class = "org.wfanet.measurement.reporting.service.api.v2alpha.DataProvidersServiceTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:authentication",
         "//src/main/kotlin/org/wfanet/measurement/api:api_key_constants",
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:packed_messages",
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:principal_server_interceptor",
-        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:principal_server_interceptor",
+        "//src/main/kotlin/org/wfanet/measurement/common/grpc:interceptors",
         "//src/main/proto/wfa/measurement/api/v2alpha:data_provider_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:data_providers_service_kt_jvm_grpc_proto",
-        "//src/main/proto/wfa/measurement/config/reporting:measurement_consumer_config_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//imports/kotlin/kotlin/test",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
         "@wfa_common_jvm//imports/kotlin/org/mockito/kotlin",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/testing",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/tink",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc/testing",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/testing",
-        "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/common:key_handles",
     ],
 )
 
@@ -39,16 +33,15 @@ kt_jvm_test(
     ],
     test_class = "org.wfanet.measurement.reporting.service.api.v2alpha.EventGroupMetadataDescriptorsServiceTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:authentication",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:principal_matcher",
         "//src/main/kotlin/org/wfanet/measurement/api:api_key_constants",
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:principal_server_interceptor",
-        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:principal_server_interceptor",
+        "//src/main/kotlin/org/wfanet/measurement/common/grpc:interceptors",
         "//src/main/proto/wfa/measurement/api/v2alpha:event_group_metadata_descriptor_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:event_group_metadata_descriptors_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha/event_group_metadata/testing:test_metadata_message_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/config/reporting:measurement_consumer_config_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
-        "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//imports/kotlin/kotlin/test",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
         "@wfa_common_jvm//imports/kotlin/org/mockito/kotlin",
@@ -71,10 +64,9 @@ kt_jvm_test(
     ],
     test_class = "org.wfanet.measurement.reporting.service.api.v2alpha.EventGroupsServiceTest",
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:principal_server_interceptor",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:authentication",
         "//src/main/kotlin/org/wfanet/measurement/reporting/service/api:cel_env_provider",
         "//src/main/kotlin/org/wfanet/measurement/reporting/service/api:encryption_key_pair_store",
-        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:principal_server_interceptor",
         "//src/main/proto/wfa/measurement/api/v2alpha:event_group_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:event_group_metadata_descriptors_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:event_groups_service_kt_jvm_grpc_proto",
@@ -126,12 +118,12 @@ kt_jvm_test(
     ],
     test_class = "org.wfanet.measurement.reporting.service.api.v2alpha.MetricsServiceTest",
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:principal_server_interceptor",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:authentication",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:principal_matcher",
         "//src/main/kotlin/org/wfanet/measurement/measurementconsumer/stats:measurement_statistics",
         "//src/main/kotlin/org/wfanet/measurement/measurementconsumer/stats:metric_statistics",
         "//src/main/kotlin/org/wfanet/measurement/measurementconsumer/stats:variances",
         "//src/main/kotlin/org/wfanet/measurement/reporting/service/api:encryption_key_pair_store",
-        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:principal_server_interceptor",
         "//src/main/proto/wfa/measurement/api/v2alpha:certificate_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:certificates_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/config/reporting:measurement_consumer_config_kt_jvm_proto",
@@ -179,9 +171,8 @@ kt_jvm_test(
     ],
     test_class = "org.wfanet.measurement.reporting.service.api.v2alpha.ReportingSetsServiceTest",
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:principal_server_interceptor",
-        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:principal_server_interceptor",
-        "//src/main/proto/wfa/measurement/config/reporting:measurement_consumer_config_kt_jvm_proto",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:authentication",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:principal_matcher",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
@@ -204,9 +195,10 @@ kt_jvm_test(
     ],
     test_class = "org.wfanet.measurement.reporting.service.api.v2alpha.MetricCalculationSpecsServiceTest",
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:principal_server_interceptor",
-        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:principal_server_interceptor",
-        "//src/main/proto/wfa/measurement/config/reporting:measurement_consumer_config_kt_jvm_proto",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:authentication",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:permission_matcher",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:principal_matcher",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:protected_resource_matcher",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
@@ -229,10 +221,11 @@ kt_jvm_test(
     ],
     test_class = "org.wfanet.measurement.reporting.service.api.v2alpha.ReportsServiceTest",
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:principal_server_interceptor",
-        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:principal_server_interceptor",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:authentication",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:permission_matcher",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:principal_matcher",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:protected_resource_matcher",
         "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:report_schedule_info_server_interceptor",
-        "//src/main/proto/wfa/measurement/config/reporting:measurement_consumer_config_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
@@ -252,8 +245,10 @@ kt_jvm_test(
     ],
     test_class = "org.wfanet.measurement.reporting.service.api.v2alpha.ReportSchedulesServiceTest",
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:principal_server_interceptor",
-        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:principal_server_interceptor",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:authentication",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:permission_matcher",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:principal_matcher",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:protected_resource_matcher",
         "//src/main/proto/wfa/measurement/config/reporting:measurement_consumer_config_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:metric_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:report_kt_jvm_proto",
@@ -276,8 +271,8 @@ kt_jvm_test(
     ],
     test_class = "org.wfanet.measurement.reporting.service.api.v2alpha.ReportScheduleIterationsServiceTest",
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:principal_server_interceptor",
-        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:principal_server_interceptor",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:authentication",
+        "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha/testing:principal_matcher",
         "//src/main/proto/wfa/measurement/config/reporting:measurement_consumer_config_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
